example-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  #  tls:
  #- hosts:
  #  - anthonycornell.com
  #  secretName: tls-secret
  rules:
  #- host: anthonycornell.com
  - http:
      paths:
        - path: /apple
          pathType: Exact
          backend:
            service:
              name: apple-service
              port: 
                number: 5678
        - path: /banana
          pathType: Exact
          backend:
            service:
              name: banana-service
              port:
                number: 5678
