example-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
    - a21ccf6caa1834b769b05b7f7be591c8-790026f529a4503d.elb.eu-west-2.amazonaws.com
    secretName: tls-secret
  rules:
  - host: a21ccf6caa1834b769b05b7f7be591c8-790026f529a4503d.elb.eu-west-2.amazonaws.com
    http:
      paths:
        - path: /apple
          pathType: Exact
          backend:
            service:
              name: apple-service
              port: 
                number: 5678
        - path: /banana
          pathType: Exact
          backend:
            service:
              name: banana-service
              port:
                number: 5678
